{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 38,
  "lineage": "6da3f602-ed3b-f839-e592-d937a06da35d",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "jrlb_jvavm_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:325583868777:loadbalancer/app/jrlb-jvavm-lb/94b6112632351d8b",
            "arn_suffix": "app/jrlb-jvavm-lb/94b6112632351d8b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jrlb-jvavm-lb-645629666.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:325583868777:loadbalancer/app/jrlb-jvavm-lb/94b6112632351d8b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jrlb-jvavm-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ca501c4b92c1597e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0372e20a25747ef49"
              },
              {
                "subnet_id": "subnet-0a3b34517303bf441"
              }
            ],
            "subnets": [
              "subnet-0372e20a25747ef49",
              "subnet-0a3b34517303bf441"
            ],
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "vpc_id": "vpc-09d2967cc4c5ed274",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sg.aws_security_group.sg_alb",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jrlb_jvavm_front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:325583868777:listener/app/jrlb-jvavm-lb/94b6112632351d8b/21d021a5f39f4ac5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:325583868777:targetgroup/jrlb-jvavm-target-group/1320530b2e2f4d3b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:325583868777:listener/app/jrlb-jvavm-lb/94b6112632351d8b/21d021a5f39f4ac5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:325583868777:loadbalancer/app/jrlb-jvavm-lb/94b6112632351d8b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.jrlb_jvavm_lb",
            "module.alb.aws_lb_target_group.jrlb_jvavm_target_group",
            "module.sg.aws_security_group.sg_alb",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jrlb_jvavm_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:325583868777:targetgroup/jrlb-jvavm-target-group/1320530b2e2f4d3b",
            "arn_suffix": "targetgroup/jrlb-jvavm-target-group/1320530b2e2f4d3b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:325583868777:targetgroup/jrlb-jvavm-target-group/1320530b2e2f4d3b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:325583868777:loadbalancer/app/jrlb-jvavm-lb/94b6112632351d8b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jrlb-jvavm-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:security-group/sg-0b4322f1ffbf48504",
            "description": "Security group para servidor web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4322f1ffbf48504",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00307078e668ef0eb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_web_sg",
            "name_prefix": "",
            "owner_id": "325583868777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:security-group/sg-08754e2c33d617810",
            "description": "Security group para RDS, permitindo acesso da instancia EC2 privada",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08754e2c33d617810",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4322f1ffbf48504"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "325583868777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.private_web_sg",
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:security-group/sg-0ca501c4b92c1597e",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca501c4b92c1597e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_alb",
            "name_prefix": "",
            "owner_id": "325583868777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:security-group/sg-00307078e668ef0eb",
            "description": "Security group para servidor web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00307078e668ef0eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "325583868777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:internet-gateway/igw-0cff43d680c76f9da",
            "id": "igw-0cff43d680c76f9da",
            "owner_id": "325583868777",
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:route-table/rtb-0f0a435289a85a622",
            "id": "rtb-0f0a435289a85a622",
            "owner_id": "325583868777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cff43d680c76f9da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0329d3146f8bc5687",
            "route_table_id": "rtb-0f0a435289a85a622",
            "subnet_id": "subnet-0a3b34517303bf441"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0474f50f32b54e5bb",
            "route_table_id": "rtb-0f0a435289a85a622",
            "subnet_id": "subnet-0372e20a25747ef49"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:subnet/subnet-047e21849bd964bdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047e21849bd964bdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325583868777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:subnet/subnet-034dfe3c935ecc026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034dfe3c935ecc026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325583868777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:subnet/subnet-0a3b34517303bf441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3b34517303bf441",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325583868777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:subnet/subnet-0372e20a25747ef49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0372e20a25747ef49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325583868777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "vpc_id": "vpc-09d2967cc4c5ed274"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_jrlb_jvavm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_jrlb_jvavm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325583868777:vpc/vpc-09d2967cc4c5ed274",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0de83509aabbdd714",
            "default_route_table_id": "rtb-03d7a3dea29dcedad",
            "default_security_group_id": "sg-05cca22e40c73b5f6",
            "dhcp_options_id": "dopt-58217123",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d2967cc4c5ed274",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d7a3dea29dcedad",
            "owner_id": "325583868777",
            "tags": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "jrlb_jvavm",
              "Periodo": "8"
            }
          }
        }
      ]
    }
  ]
}